[gd_scene load_steps=25 format=2]

[ext_resource path="res://ui/theme/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/menu/CharacterEntry.tscn" type="PackedScene" id=2]
[ext_resource path="res://menu/Menu.gd" type="Script" id=3]
[ext_resource path="res://ui/menu/menu_character_button_group.tres" type="ButtonGroup" id=4]
[ext_resource path="res://scenes/CharacterSelectorMenu.gd" type="Script" id=5]
[ext_resource path="res://scenes/CharacterCreationMenu.gd" type="Script" id=6]
[ext_resource path="res://ui/menu/character_creation_button_group.tres" type="ButtonGroup" id=7]
[ext_resource path="res://ui/options/Options.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/register/Register.tscn" type="PackedScene" id=9]
[ext_resource path="res://ui/login/Login.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/ConnectButton.gd" type="Script" id=11]
[ext_resource path="res://scenes/HostButton.gd" type="Script" id=12]
[ext_resource path="res://scenes/DisconnectButton.gd" type="Script" id=13]
[ext_resource path="res://scenes/ConnectServerButton.gd" type="Script" id=14]
[ext_resource path="res://scenes/HostGameButton.gd" type="Script" id=15]
[ext_resource path="res://voxelman/world/TVVoxelWorld.gd" type="Script" id=16]
[ext_resource path="res://modules/planets/test_planet/voxel_library/1_main_lib_merger_empty.tres" type="VoxelmanLibraryMerger" id=17]
[ext_resource path="res://scripts/world_generators/MainPlanetGenerator.gd" type="Script" id=18]
[ext_resource path="res://scripts/settings/DirectionalLightSettings.gd" type="Script" id=19]
[ext_resource path="res://ui/about/About.tscn" type="PackedScene" id=20]
[ext_resource path="res://modules/planets/test_planet/SimplePlanetData.tres" type="Planet" id=21]

[sub_resource type="VoxelmanLevelGenerator" id=1]
script = ExtResource( 18 )
_force_planet = -1
_level_seed = 4
_spawn_mobs = false
planet = ExtResource( 21 )

[sub_resource type="ProceduralSky" id=2]
sky_top_color = Color( 0.447059, 0.780392, 0.854902, 1 )
sky_horizon_color = Color( 0.27451, 0.278431, 0.207843, 1 )
sky_curve = 0.263535
sky_energy = 0.3
ground_bottom_color = Color( 0.196078, 0.152941, 0.152941, 1 )
ground_horizon_color = Color( 0.223529, 0.192157, 0.164706, 1 )
ground_curve = 0.101965
ground_energy = 0.4
sun_color = Color( 0.45098, 0.352941, 0.113725, 1 )
sun_latitude = 39.71
sun_longitude = -8.09
sun_angle_min = 0.0
sun_angle_max = 23.15
sun_energy = 9.29
texture_size = 0

[sub_resource type="Environment" id=3]
background_mode = 2
background_sky = SubResource( 2 )
ambient_light_color = Color( 0.870588, 0.870588, 0.870588, 1 )
ambient_light_energy = 1.24
ambient_light_sky_contribution = 0.09
fog_enabled = true
fog_color = Color( 0.184314, 0.207843, 0.156863, 1 )
fog_sun_color = Color( 0.239216, 0.337255, 0.396078, 1 )
fog_sun_amount = 0.53
fog_depth_begin = 155.9
fog_depth_end = 379.9
fog_depth_curve = 1.18921
tonemap_mode = 2
tonemap_exposure = 0.83
auto_exposure_max_luma = 7.33
ss_reflections_enabled = true
ssao_enabled = true
glow_levels/3 = false
glow_intensity = 1.6
glow_strength = 1.1
glow_bloom = 0.1
glow_hdr_luminance_cap = 1.0
adjustment_enabled = true

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
character_selector_scene = NodePath("CharacterSelectorMenu")
charcer_creation_scenes = NodePath("CharacterCreationMenu")

[node name="GameName" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -61.0
margin_right = 61.0
margin_bottom = 26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GameName"]
margin_left = 4.0
margin_top = 5.0
margin_right = 118.0
margin_bottom = 20.0
text = "Borken Seals"
align = 1
valign = 1

[node name="CharacterSelectorMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
menu_path = NodePath("..")
container_path = NodePath("CharacterSelector/VBoxContainer/CharacterSelector/VBoxContainer/ScrollContainer/Container")
player_display_container_path = NodePath("../Char/CharacterDisplay")
character_button_group = ExtResource( 4 )
character_entry = ExtResource( 2 )
character_folder = "characters"
load_button_path = NodePath("CharacterSelector/VBoxContainer/CharacterSelector/VBoxContainer/Load")
renounce_button_path = NodePath("CharacterSelector/VBoxContainer/CharacterSelector/VBoxContainer/Delete")
create_button_path = NodePath("CharacterSelector/VBoxContainer/CharacterSelector/VBoxContainer/New")

[node name="CharacterSelector" type="MarginContainer" parent="CharacterSelectorMenu"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -305.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterSelectorMenu/CharacterSelector"]
margin_top = 20.0
margin_right = 285.0
margin_bottom = 580.0
alignment = 2

[node name="CharacterSelector" type="PanelContainer" parent="CharacterSelectorMenu/CharacterSelector/VBoxContainer"]
margin_right = 285.0
margin_bottom = 560.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterSelectorMenu/CharacterSelector/VBoxContainer/CharacterSelector"]
margin_left = 4.0
margin_top = 4.0
margin_right = 281.0
margin_bottom = 556.0

[node name="ScrollContainer" type="ScrollContainer" parent="CharacterSelectorMenu/CharacterSelector/VBoxContainer/CharacterSelector/VBoxContainer"]
margin_right = 277.0
margin_bottom = 450.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Container" type="VBoxContainer" parent="CharacterSelectorMenu/CharacterSelector/VBoxContainer/CharacterSelector/VBoxContainer/ScrollContainer"]
margin_right = 277.0
size_flags_horizontal = 3

[node name="Load" type="Button" parent="CharacterSelectorMenu/CharacterSelector/VBoxContainer/CharacterSelector/VBoxContainer"]
margin_top = 458.0
margin_right = 277.0
margin_bottom = 484.57
text = "Load"

[node name="New" type="Button" parent="CharacterSelectorMenu/CharacterSelector/VBoxContainer/CharacterSelector/VBoxContainer"]
margin_top = 492.0
margin_right = 277.0
margin_bottom = 518.57
text = "New"

[node name="Delete" type="Button" parent="CharacterSelectorMenu/CharacterSelector/VBoxContainer/CharacterSelector/VBoxContainer"]
margin_top = 526.0
margin_right = 277.0
margin_bottom = 552.57
text = "Delete"

[node name="PlayerDisplays" type="Node" parent="CharacterSelectorMenu"]

[node name="CharacterCreationMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
character_entry = ExtResource( 2 )
menu_path = NodePath("..")
name_imput_path = NodePath("CharacterSelector2/CharacterSelector/VBoxContainer/PanelContainer/VBoxContainer/LineEdit")
container_path = NodePath("CharacterSelector2/CharacterSelector/VBoxContainer/ScrollContainer/Container")
character_creation_button_group = ExtResource( 7 )
character_folder = "characters"

[node name="CharacterSelector2" type="MarginContainer" parent="CharacterCreationMenu"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -305.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterSelector" type="PanelContainer" parent="CharacterCreationMenu/CharacterSelector2"]
margin_top = 20.0
margin_right = 285.0
margin_bottom = 580.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterCreationMenu/CharacterSelector2/CharacterSelector"]
margin_left = 4.0
margin_top = 4.0
margin_right = 281.0
margin_bottom = 556.0

[node name="ScrollContainer" type="ScrollContainer" parent="CharacterCreationMenu/CharacterSelector2/CharacterSelector/VBoxContainer"]
margin_right = 277.0
margin_bottom = 421.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Container" type="VBoxContainer" parent="CharacterCreationMenu/CharacterSelector2/CharacterSelector/VBoxContainer/ScrollContainer"]
margin_right = 277.0
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="CharacterCreationMenu/CharacterSelector2/CharacterSelector/VBoxContainer"]
margin_top = 429.0
margin_right = 277.0
margin_bottom = 552.0

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterCreationMenu/CharacterSelector2/CharacterSelector/VBoxContainer/PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 273.0
margin_bottom = 119.0

[node name="Label" type="Label" parent="CharacterCreationMenu/CharacterSelector2/CharacterSelector/VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 269.0
margin_bottom = 15.0
text = "Character name"

[node name="LineEdit" type="LineEdit" parent="CharacterCreationMenu/CharacterSelector2/CharacterSelector/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 269.0
margin_bottom = 47.3413

[node name="Create" type="Button" parent="CharacterCreationMenu/CharacterSelector2/CharacterSelector/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 269.0
margin_bottom = 81.5702
size_flags_horizontal = 3
text = "Create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="CharacterCreationMenu/CharacterSelector2/CharacterSelector/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 269.0
margin_bottom = 115.57
text = "Back"

[node name="ConnectMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="ConnectMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.0
margin_top = -89.0
margin_right = 126.0
margin_bottom = 89.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ConnectMenu/PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 248.0
margin_bottom = 254.0

[node name="Label3" type="Label" parent="ConnectMenu/PanelContainer/VBoxContainer"]
margin_right = 244.0
margin_bottom = 15.0
text = "Connect"
align = 1
valign = 1

[node name="Label" type="Label" parent="ConnectMenu/PanelContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 244.0
margin_bottom = 38.0
text = "Hostname / IP"

[node name="LineEdit" type="LineEdit" parent="ConnectMenu/PanelContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 244.0
margin_bottom = 70.3413
text = "127.0.0.1"

[node name="Label2" type="Label" parent="ConnectMenu/PanelContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 244.0
margin_bottom = 93.0
text = "Port"

[node name="LineEdit2" type="LineEdit" parent="ConnectMenu/PanelContainer/VBoxContainer"]
margin_top = 101.0
margin_right = 244.0
margin_bottom = 125.341
text = "23223"

[node name="CheckBox" type="CheckBox" parent="ConnectMenu/PanelContainer/VBoxContainer"]
margin_top = 133.0
margin_right = 244.0
margin_bottom = 159.57
text = "Use WebSockets"

[node name="Status" type="Label" parent="ConnectMenu/PanelContainer/VBoxContainer"]
margin_top = 167.0
margin_right = 244.0
margin_bottom = 182.0
align = 1
valign = 1

[node name="ConnectButton" type="Button" parent="ConnectMenu/PanelContainer/VBoxContainer"]
margin_top = 190.0
margin_right = 244.0
margin_bottom = 216.57
text = "Connect"
script = ExtResource( 14 )
container_path = NodePath("../../..")
status_label_path = NodePath("../Status")
use_websockets_checkbox_path = NodePath("../CheckBox")
ip_line_edit_path = NodePath("../LineEdit")
port_line_edit_path = NodePath("../LineEdit2")

[node name="Button2" type="Button" parent="ConnectMenu/PanelContainer/VBoxContainer"]
margin_top = 224.0
margin_right = 244.0
margin_bottom = 250.57
text = "Cancel"

[node name="HostMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="HostMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.0
margin_top = -101.5
margin_right = 126.0
margin_bottom = 101.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HostMenu/PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 248.0
margin_bottom = 199.0

[node name="Label3" type="Label" parent="HostMenu/PanelContainer/VBoxContainer"]
margin_right = 244.0
margin_bottom = 15.0
text = "Host"
align = 1
valign = 1

[node name="Label2" type="Label" parent="HostMenu/PanelContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 244.0
margin_bottom = 38.0
text = "Port"

[node name="LineEdit2" type="LineEdit" parent="HostMenu/PanelContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 244.0
margin_bottom = 70.3413
text = "23223"

[node name="CheckBox" type="CheckBox" parent="HostMenu/PanelContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 244.0
margin_bottom = 104.57
text = "Use WebSockets"

[node name="Status" type="Label" parent="HostMenu/PanelContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 244.0
margin_bottom = 127.0
align = 1
valign = 1

[node name="HostButton" type="Button" parent="HostMenu/PanelContainer/VBoxContainer"]
margin_top = 135.0
margin_right = 244.0
margin_bottom = 161.57
text = "Host"
script = ExtResource( 15 )
container_path = NodePath("../../..")
status_label_path = NodePath("../Status")
use_websockets_checkbox_path = NodePath("../CheckBox")
port_line_edit_path = NodePath("../LineEdit2")

[node name="Button2" type="Button" parent="HostMenu/PanelContainer/VBoxContainer"]
margin_top = 169.0
margin_right = 244.0
margin_bottom = 195.57
text = "Cancel"

[node name="OptionsButton" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="OptionsButton"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsButton/Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -175.0
margin_right = 111.0
mouse_filter = 2
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Disconnect" type="Button" parent="OptionsButton/Control/VBoxContainer"]
visible = false
margin_right = 120.0
margin_bottom = 26.269
rect_min_size = Vector2( 120, 0 )
text = "Disconnect"
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connect" type="Button" parent="OptionsButton/Control/VBoxContainer"]
margin_top = 47.0
margin_right = 120.0
margin_bottom = 73.5702
rect_min_size = Vector2( 120, 0 )
text = "Connect"
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="Button" parent="OptionsButton/Control/VBoxContainer"]
margin_top = 81.0
margin_right = 120.0
margin_bottom = 107.57
rect_min_size = Vector2( 120, 0 )
text = "Host"
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="OptionsButton/Control/VBoxContainer"]
visible = false
margin_top = 115.0
margin_right = 120.0
margin_bottom = 141.57
rect_min_size = Vector2( 120, 0 )
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="OptionsButton/Control/VBoxContainer"]
visible = false
margin_top = 115.0
margin_right = 120.0
margin_bottom = 141.57
rect_min_size = Vector2( 120, 0 )
text = "Register"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="About" type="Button" parent="OptionsButton/Control/VBoxContainer"]
margin_top = 115.0
margin_right = 120.0
margin_bottom = 141.57
rect_min_size = Vector2( 120, 0 )
text = "About"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="OptionsButton/Control/VBoxContainer"]
margin_top = 149.0
margin_right = 120.0
margin_bottom = 175.57
rect_min_size = Vector2( 120, 0 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" parent="." instance=ExtResource( 8 )]
visible = false

[node name="About" parent="." instance=ExtResource( 20 )]
visible = false

[node name="Login" parent="." instance=ExtResource( 10 )]
visible = false
margin_left = -107.5
margin_top = -127.5
margin_right = 107.5
margin_bottom = 127.5

[node name="Register" parent="." instance=ExtResource( 9 )]
visible = false

[node name="Char" type="Spatial" parent="."]
transform = Transform( -0.999545, 0, 0.0301548, 0, 1, 0, -0.0301548, 0, -0.999545, 1.59087, 0.958899, 3.64338 )
__meta__ = {
"_editor_description_": ""
}

[node name="CharacterDisplay" type="Spatial" parent="Char"]
transform = Transform( 1, 1.49012e-08, 0, 0, 0.990268, -0.139173, -2.98023e-08, 0.139173, 0.990268, -5.96046e-08, 0.578123, 0.08125 )

[node name="Camera" type="Camera" parent="Char"]
transform = Transform( 0.907555, -0.0761572, 0.41297, 0.0262364, 0.99178, 0.12524, -0.419113, -0.102827, 0.902093, 0.752064, 1.69463, 3.15021 )
current = true

[node name="World" type="VoxelWorldDefault" parent="." groups=[
"save",
]]
data_margin_end = 2
use_threads = false
library = ExtResource( 17 )
level_generator = SubResource( 1 )
voxel_scale = 1.6
chunk_spawn_range = 2
build_flags = 255
chunk_lod_falloff = 1
script = ExtResource( 16 )
show_loading_screen = false
generate_on_ready = true
spawn_height = 2
use_global_chunk_settings = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="World"]
environment = SubResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="DirectionalLight" type="DirectionalLight" parent="World"]
transform = Transform( -0.797163, 0.45442, 0.397535, 0.124932, -0.520028, 0.844963, 0.590697, 0.723238, 0.357776, 0, 18.834, 0 )
layers = 3
light_color = Color( 1, 0.878431, 0.878431, 1 )
light_energy = 0.87
light_specular = 0.65
shadow_bias = 0.07
script = ExtResource( 19 )

[connection signal="pressed" from="CharacterSelectorMenu/CharacterSelector/VBoxContainer/CharacterSelector/VBoxContainer/Load" to="CharacterSelectorMenu" method="load_character"]
[connection signal="pressed" from="CharacterSelectorMenu/CharacterSelector/VBoxContainer/CharacterSelector/VBoxContainer/New" to="." method="switch_to_menu" binds= [ 1 ]]
[connection signal="pressed" from="CharacterSelectorMenu/CharacterSelector/VBoxContainer/CharacterSelector/VBoxContainer/Delete" to="CharacterSelectorMenu" method="renounce_character"]
[connection signal="pressed" from="CharacterCreationMenu/CharacterSelector2/CharacterSelector/VBoxContainer/PanelContainer/VBoxContainer/Create" to="CharacterCreationMenu" method="create"]
[connection signal="pressed" from="CharacterCreationMenu/CharacterSelector2/CharacterSelector/VBoxContainer/PanelContainer/VBoxContainer/Back" to="." method="switch_to_menu" binds= [ 0 ]]
[connection signal="pressed" from="ConnectMenu/PanelContainer/VBoxContainer/Button2" to="ConnectMenu" method="hide"]
[connection signal="pressed" from="HostMenu/PanelContainer/VBoxContainer/Button2" to="HostMenu" method="hide"]
[connection signal="pressed" from="OptionsButton/Control/VBoxContainer/Connect" to="ConnectMenu" method="show"]
[connection signal="pressed" from="OptionsButton/Control/VBoxContainer/Host" to="HostMenu" method="show"]
[connection signal="pressed" from="OptionsButton/Control/VBoxContainer/Button2" to="Login" method="show"]
[connection signal="pressed" from="OptionsButton/Control/VBoxContainer/Button3" to="Register" method="show"]
[connection signal="pressed" from="OptionsButton/Control/VBoxContainer/About" to="About" method="show"]
[connection signal="pressed" from="OptionsButton/Control/VBoxContainer/Button" to="Options" method="show"]
